--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,25 +14,27 @@
         android:layout_alignParentLeft="true"
         android:adjustViewBounds="false"
         android:scaleType="centerCrop"
-        android:src="@drawable/coffeeCake" />
+        android:src="@drawable/coffeebeans" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerHorizontal="true"
-        android:background="@color/backgroundText"
+
         android:layout_margin="24dp"
         android:padding="24dp">
 
         <TextView
-            android:id="@+id/quantity_text"
+            android:id="@+id/quantity_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal"
-            android:text="Quantity"
-            android:textColor="@color/colorFont" />
+            android:text="@string/quantity"
+            android:textColor="@color/colorFont"
+            android:background="@color/backgroundText"
+            android:textSize="24sp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -45,8 +47,9 @@
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:text="+"
-                android:textColor="@color/colorButtonText" />
+                android:text="@string/plus"
+                android:textColor="@color/colorButtonText"
+                android:onClick="increment"/>
 
             <TextView
                 android:id="@+id/quantity_amount"
@@ -54,26 +57,35 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="099"
-                android:textColor="@color/colorFont" />
+                android:layout_gravity="center"
+                android:hint="0"
+                android:textColorHint="@color/colorFont"
+                android:background="@color/backgroundText"
+                android:textSize="24sp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                />
 
             <Button
                 android:id="@+id/minus"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:text="-"
-                android:textColor="@color/colorButtonText" />
+                android:text="@string/minus"
+                android:textColor="@color/colorButtonText"
+                android:onClick="decrement"/>
         </LinearLayout>
 
         <TextView
-            android:id="@+id/price_text"
+            android:id="@+id/price_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal"
-            android:text="Price"
-            android:textColor="@color/colorFont" />
+            android:text="@string/price"
+            android:textColor="@color/colorFont"
+            android:background="@color/backgroundText"
+            android:textSize="24sp"/>
 
         <TextView
             android:id="@+id/price_amount"
@@ -81,8 +93,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal"
-            android:text="$999.999,99"
-            android:textColor="@color/colorFont" />
+            android:hint="$0.00"
+            android:textColorHint="@color/colorFont"
+            android:background="@color/backgroundText"
+            android:textSize="24sp"/>
 
         <Button
             android:id="@+id/order"
@@ -91,7 +105,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:layout_gravity="center_horizontal"
-            android:text="Order"
+            android:text="@string/order"
             android:textColor="@color/colorButtonText"
             android:onClick="submitOrder"/>
 
