--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,95 +19,118 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="24dp"
 
-        android:layout_margin="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="@color/colorButtonText"
+        android:orientation="vertical"
         android:padding="24dp">
+
+        <TextView
+            android:id="@+id/toppings_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/toppings"
+            android:textColor="@color/colorFont"
+            android:textSize="24sp" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorFont"
+            android:text="@string/chck_whipped"
+            android:textColor="@color/colorFont"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/quantity_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"
+            android:background="@color/backgroundText"
             android:text="@string/quantity"
             android:textColor="@color/colorFont"
-            android:background="@color/backgroundText"
-            android:textSize="24sp"/>
+            android:textSize="24sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp">
 
             <Button
                 android:id="@+id/plus"
-                android:layout_height="wrap_content"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="increment"
                 android:text="@string/plus"
-                android:textColor="@color/colorButtonText"
-                android:onClick="increment"/>
+                android:textColor="@color/colorButtonText" />
 
             <TextView
                 android:id="@+id/quantity_amount"
-                android:layout_height="wrap_content"
                 android:layout_width="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:hint="0"
-                android:textColorHint="@color/colorFont"
-                android:background="@color/backgroundText"
-                android:textSize="24sp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                />
+                android:layout_weight="1"
+                android:background="@color/backgroundText"
+                android:gravity="center"
+                android:hint="0"
+                android:textColorHint="@color/colorFont"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/minus"
-                android:layout_height="wrap_content"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="decrement"
                 android:text="@string/minus"
-                android:textColor="@color/colorButtonText"
-                android:onClick="decrement"/>
+                android:textColor="@color/colorButtonText" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/price_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal"
-            android:text="@string/price"
-            android:textColor="@color/colorFont"
+            android:layout_marginTop="24dp"
             android:background="@color/backgroundText"
-            android:textSize="24sp"/>
+            android:text="@string/order_summary"
+            android:textColor="@color/colorFont"
+            android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/price_amount"
+            android:id="@+id/order_summary_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"
+            android:background="@color/backgroundText"
             android:hint="$0.00"
             android:textColorHint="@color/colorFont"
-            android:background="@color/backgroundText"
-            android:textSize="24sp"/>
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal"
+            android:onClick="submitOrder"
             android:text="@string/order"
-            android:textColor="@color/colorButtonText"
-            android:onClick="submitOrder"/>
+            android:textColor="@color/colorButtonText" />
 
     </LinearLayout>
 
