--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorFont">#ffff</color>
-    <color name="colorButtonText">#532007</color>
+    <color name="colorFont">#FFFFFF</color>
+    <color name="colorButtonText">#82532007</color>
     <color name="backgroundText">#85381200</color>
 </resources>
