--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,137 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/background_image"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:adjustViewBounds="false"
-        android:scaleType="centerCrop"
-        android:src="@drawable/coffeebeans" />
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="24dp"
-
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="24dp"
-        android:background="@color/colorButtonText"
-        android:orientation="vertical"
-        android:padding="24dp">
-
-        <TextView
-            android:id="@+id/toppings_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/toppings"
-            android:textColor="@color/colorFont"
-            android:textSize="24sp" />
-
-        <CheckBox
-            android:id="@+id/checkBox"
+        <ImageView
+            android:id="@+id/background_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:buttonTint="@color/colorFont"
-            android:text="@string/chck_whipped"
-            android:textColor="@color/colorFont"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/quantity_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="24dp"
-            android:background="@color/backgroundText"
-            android:text="@string/quantity"
-            android:textColor="@color/colorFont"
-            android:textSize="24sp" />
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:adjustViewBounds="false"
+            android:scaleType="centerCrop"
+            android:src="@drawable/coffeebeans" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="24dp">
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="24dp"
 
-            <Button
-                android:id="@+id/plus"
-                android:layout_width="0dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="24dp"
+            android:background="@color/colorButtonText"
+            android:orientation="vertical"
+            android:padding="24dp">
+
+            <EditText
+                android:id="@+id/name_text_view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="increment"
-                android:text="@string/plus"
-                android:textColor="@color/colorButtonText" />
+                android:textSize="16sp"
+                android:hint="Name"/>
 
             <TextView
-                android:id="@+id/quantity_amount"
-                android:layout_width="0dp"
+                android:id="@+id/toppings_text_view"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/toppings"
+                android:textColor="@color/colorFont"
+                android:textSize="24sp"
+                android:layout_marginTop="24dp"/>
+
+            <CheckBox
+                android:id="@+id/checkBox_whipped_cream"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/colorFont"
+                android:text="@string/chck_whipped"
+                android:textColor="@color/colorFont"
+                android:textSize="16sp" />
+
+            <CheckBox
+                android:id="@+id/checkBox_chocolate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/colorFont"
+                android:text="@string/chocolate"
+                android:textColor="@color/colorFont"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/quantity_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
                 android:background="@color/backgroundText"
-                android:gravity="center"
-                android:hint="0"
+                android:text="@string/quantity"
+                android:textColor="@color/colorFont"
+                android:textSize="24sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp">
+
+                <Button
+                    android:id="@+id/plus"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="increment"
+                    android:text="@string/plus"
+                    android:textColor="@color/colorButtonText" />
+
+                <TextView
+                    android:id="@+id/quantity_amount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    android:background="@color/backgroundText"
+                    android:gravity="center"
+                    android:hint="0"
+                    android:textColorHint="@color/colorFont"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/minus"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="decrement"
+                    android:text="@string/minus"
+                    android:textColor="@color/colorButtonText" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/price_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
+                android:background="@color/backgroundText"
+                android:text="@string/order_summary"
+                android:textColor="@color/colorFont"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/order_summary_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
+                android:background="@color/backgroundText"
+                android:hint="$0.00"
                 android:textColorHint="@color/colorFont"
                 android:textSize="24sp" />
 
             <Button
-                android:id="@+id/minus"
-                android:layout_width="0dp"
+                android:id="@+id/order"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="decrement"
-                android:text="@string/minus"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:onClick="submitOrder"
+                android:text="@string/order"
                 android:textColor="@color/colorButtonText" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/price_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="24dp"
-            android:background="@color/backgroundText"
-            android:text="@string/order_summary"
-            android:textColor="@color/colorFont"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/order_summary_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="24dp"
-            android:background="@color/backgroundText"
-            android:hint="$0.00"
-            android:textColorHint="@color/colorFont"
-            android:textSize="24sp" />
-
-        <Button
-            android:id="@+id/order"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:onClick="submitOrder"
-            android:text="@string/order"
-            android:textColor="@color/colorButtonText" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
