--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:hint="Name"/>
+                android:hint="Name"
+                android:inputType="textCapWords"/>
 
             <TextView
                 android:id="@+id/toppings_text_view"
