--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:hint="Name"
+                android:textColorHint="@color/colorFont"
                 android:inputType="textCapWords"/>
 
             <TextView
